--- a/hw3/titanic.ipynb
+++ b/hw3/titanic.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-01T14:30:31.846499Z",
-     "start_time": "2025-08-01T14:30:31.828066Z"
+     "end_time": "2025-08-04T02:13:51.732731Z",
+     "start_time": "2025-08-04T02:13:51.716917Z"
     }
    },
    "source": [
@@ -17,17 +17,16 @@
     "test_passenger_id = test['PassengerId'].copy()\n",
     "test = test.drop(['PassengerId'], axis=1)\n",
     "X = train.drop(['PassengerId', 'Survived'], axis=1)\n",
-    "y = train['Survived']\n",
-    "test = test.drop('PassengerId', axis=1)"
+    "y = train['Survived']"
    ],
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-01T14:43:18.074927Z",
-     "start_time": "2025-08-01T14:43:18.039673Z"
+     "end_time": "2025-08-04T02:13:55.492634Z",
+     "start_time": "2025-08-04T02:13:51.740150Z"
     }
    },
    "cell_type": "code",
@@ -38,7 +37,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.metrics import mean_squared_error,r2_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', make_pipeline(SimpleImputer(strategy='mean'), StandardScaler()), ['Age', 'Fare']),\n",
@@ -48,8 +47,7 @@
     "X_train, X_test, y_train, y_test= train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "logistic.fit(X_train, y_train)\n",
     "y_pred = logistic.predict(X_test)\n",
-    "print(\"MSE:\", mean_squared_error(y_test, y_pred))\n",
-    "print(\"R2:\", r2_score(y_test, y_pred))\n",
+    "print(\"accuracy_score:\", accuracy_score(y_test, y_pred))\n",
     "\n",
     "y_test_pred = logistic.predict(test)\n",
     "predict = pd.DataFrame({\n",
@@ -65,8 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.20670391061452514\n",
-      "R2: 0.14761904761904754\n",
+      "accuracy_score: 0.7932960893854749\n",
       "Survived: 157\n"
      ]
     },
@@ -173,20 +170,25 @@
        "</div>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 85
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-04T02:13:55.588571Z",
+     "start_time": "2025-08-04T02:13:55.571271Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "89b4332b525641f6"
+   "id": "89b4332b525641f6",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
