--- a/hw5/支持向量机作业.ipynb
+++ b/hw5/支持向量机作业.ipynb
@@ -47,20 +47,24 @@
     "   并把自定义的SVM分类用于 iris data(鸢尾花数据)； 取花瓣长度 和 花瓣宽度特征， 分类 看是不是 分类2的花 （(iris.target == 2)\n",
     "\n",
     "   对比下sklearn自带的SVM分类 和 自定义SVM分类 实现的分类效果\n",
+    "\n",
+    "---\n",
+    "\n",
+    "3. 在加州房屋数据集上训练和微调SVM回归器。可以使用原始数据集而不是 在课上使用的调整后的版本，\n",
+    "可以使用sklearn.datasets.fetch_california_housing()加载它。目标代表了数十万美元。\n",
+    "由于有超过20000个实例，SVM可能会很慢，因此对于超参数调整，应该使用更少的实例（例如2000个）来测试更多的超参数组合。最佳模型的RMSE是多少？\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "4210292c3c2ffc48",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-10T09:33:16.650213Z",
-     "start_time": "2025-08-10T09:33:16.619282Z"
+     "end_time": "2025-08-12T05:29:08.692344Z",
+     "start_time": "2025-08-12T05:29:02.893732Z"
     }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import datasets\n",
@@ -70,27 +74,19 @@
     "data_wine = datasets.load_wine()\n",
     "datadf = pd.DataFrame(data_wine.data, columns=data_wine.feature_names)\n",
     "X_train, X_test, y_train, y_test = train_test_split(datadf, data_wine['target'],random_state=42)\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "8662e756dc7d8d54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-10T09:33:17.303858Z",
-     "start_time": "2025-08-10T09:33:17.269096Z"
+     "end_time": "2025-08-12T05:29:09.046850Z",
+     "start_time": "2025-08-12T05:29:08.706382Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9777777777777777\n"
-     ]
-    }
-   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.multiclass import OneVsRestClassifier  # 一对其余的分类器\n",
@@ -100,15 +96,25 @@
     "ovr_clf.fit(X_train, y_train)\n",
     "y_pred = ovr_clf.predict(X_test)\n",
     "print(accuracy_score(y_test, y_pred))"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9777777777777777\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "e8d1e52fd0dca3e9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-10T10:24:45.781114Z",
-     "start_time": "2025-08-10T10:24:44.835446Z"
+     "end_time": "2025-08-12T05:29:09.067499Z",
+     "start_time": "2025-08-12T05:29:09.055802Z"
     }
    },
    "source": [
@@ -168,15 +174,15 @@
     "        return self.decision_function(X) >= 0"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "f8361900b72a402a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-10T10:38:01.221461Z",
-     "start_time": "2025-08-10T10:38:01.175005Z"
+     "end_time": "2025-08-12T05:29:09.130216Z",
+     "start_time": "2025-08-12T05:29:09.075133Z"
     }
    },
    "source": [
@@ -215,15 +221,75 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-17T01:14:22.667398Z",
+     "start_time": "2025-08-17T01:13:53.232354Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "b51dc049ff9025da"
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "data = fetch_california_housing()\n",
+    "X, y = data.data, data.target\n",
+    "\n",
+    "X_subset, _, y_subset, _ = train_test_split(X, y, train_size=2000, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_subset_scaled = scaler.fit_transform(X_subset)\n",
+    "\n",
+    "#\n",
+    "param_grid = {\n",
+    "    'kernel': ['linear', 'rbf'],\n",
+    "    'C': [0.1, 1, 10],\n",
+    "    'gamma': ['scale', 'auto']\n",
+    "}\n",
+    "\n",
+    "# 初始化 GridSearchCV\n",
+    "grid_search = GridSearchCV(\n",
+    "    SVR(),\n",
+    "    param_grid,\n",
+    "    cv=5,\n",
+    "    scoring='neg_mean_squared_error'\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_subset_scaled, y_subset)\n",
+    "\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "best_svr = SVR(**grid_search.best_params_)\n",
+    "best_svr.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred = best_svr.predict(X_test_scaled)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "print(\"RMSE\",rmse)"
+   ],
+   "id": "b51dc049ff9025da",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "Best Parameters: {'C': 10, 'gamma': 'auto', 'kernel': 'rbf'}\n",
+      "RMSE 0.5678444859569218\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
