--- a/hw7/随机森林作业.ipynb
+++ b/hw7/随机森林作业.ipynb
@@ -67,10 +67,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-09-03T14:42:45.384579Z",
      "start_time": "2025-09-03T14:40:13.250761Z"
     }
    },
@@ -93,14 +91,31 @@
     "print(voting_classifier.score(X_test,y_test))"
    ],
    "id": "c0f638be98a63d64",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf  valid accuracy = 0.8683 train accuracy = 0.870175 test accuracy = 0.88015\n",
+      "et  valid accuracy = 0.8524 train accuracy = 0.8564 test accuracy = 0.86625\n",
+      "svc  valid accuracy = 0.8488 train accuracy = 0.876725 test accuracy = 0.8702\n",
+      "0.8718\n",
+      "0.8849\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-09-03T14:42:45.867132Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import numpy as np\n",
     "from sklearn.ensemble import StackingClassifier\n",
@@ -132,7 +147,9 @@
     "stacking_clf.fit(X_train_full, y_train_full)\n",
     "stacking_clf.score(X_test, y_test)"
    ],
-   "id": "a828aeb413b8c46e"
+   "id": "a828aeb413b8c46e",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
