--- a/hw8/神经网络作业说明.ipynb
+++ b/hw8/神经网络作业说明.ipynb
@@ -63,9 +63,6 @@
    "metadata": {
     "jupyter": {
      "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-09-03T14:31:45.007947Z"
     }
    },
    "cell_type": "code",
@@ -196,34 +193,23 @@
     "print(f\"测试准确率: {test_accuracy:.4f}\")\n"
    ],
    "id": "eddfaaa07e9fd2e0",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Trial 10 Complete [00h 00m 37s]\n",
+      "val_accuracy: 0.9556999802589417\n",
       "\n",
-      "Search: Running Trial #1\n",
-      "\n",
-      "Value             |Best Value So Far |Hyperparameter\n",
-      "5                 |5                 |n_hidden\n",
-      "256               |256               |n_neurons\n",
-      "0.00065625        |0.00065625        |learning_rate\n",
-      "sgd               |sgd               |optimizer\n",
-      "selu              |selu              |activation\n",
-      "0.1               |0.1               |dropout_rate\n",
-      "True              |True              |dropout\n",
-      "\n",
+      "Best val_accuracy So Far: 0.9789000153541565\n",
+      "Total elapsed time: 00h 13m 21s\n",
+      "最佳超参数:  {'n_hidden': 2, 'n_neurons': 384, 'learning_rate': 0.0003069273045576997, 'optimizer': 'adam', 'activation': 'selu', 'dropout_rate': 0.4, 'dropout': False, 'batch_size': 32}\n",
       "Epoch 1/10\n",
-      "   1/1875 [..............................] - ETA: 15:12 - loss: 4.7336 - accuracy: 0.1250WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0029s vs `on_train_batch_end` time: 0.0040s). Check your callbacks.\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 1.0072 - accuracy: 0.7072 - val_loss: 0.3626 - val_accuracy: 0.8948\n",
-      "Epoch 2/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.5421 - accuracy: 0.8396 - val_loss: 0.3042 - val_accuracy: 0.9150\n",
-      "Epoch 3/10\n",
-      " 702/1875 [==========>...................] - ETA: 3s - loss: 0.4705 - accuracy: 0.8594"
+      " 313/1875 [====>.........................] - ETA: 12s - loss: 0.4856 - accuracy: 0.8526"
      ]
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "metadata": {},
